made some modification on the keys

--- a/demo/1_简单的GPT机器人demo/.env
+++ b/demo/1_简单的GPT机器人demo/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY  = 123
-# OPENAI_BASE_URL = https://xxxxxxxx
-# HTTP_PROXY      = xxxxxxxx
-# HTTPS_PROXY     = xxxxxxxx
+OPENAI_API_KEY = sk-eM5BjcE7uZdss5Zs11483436853f473cB932A671C42eC956
+OPENAI_BASE_URL = https://apikeyplus.com/v1
+HTTP_PROXY      = http://localhost:7890
+HTTPS_PROXY     = http://localhost:7890
